style.css
:root {
	--font: "Outfit", sans-serif;
	--bordersrad: 8px;
	--shadow: 0px 0px 5px 0px #292929;
	--background: #c9c9c9;
	--paper-background: white;

	--tape-gray: #dbd8be;
	--tape-edge-gray: #b7b49d;

	--text: #4b4b4b;
	--Btext: #2c2c2c;
	--Wtext: #ffffff;
}

body {
	margin: 0px;
	font-family: var(--font);
	background-color: #292929;
	resize: none;
	overflow-x: hidden;
}

li {
	display: inline;
	transition: transform .2s;
}

li:hover {
	transform: scale(1.05);
}

/* Links */

a:link {
	color: rgb(202, 202, 202);
	background-color: transparent;
	text-decoration: none;
}

/* Warning */

.WarningBlur {
	backdrop-filter: blur(8px);
	background-color: rgba(0, 0, 0, 0.3);
	width: 100%;
	height: 100%;
	z-index: 2;
	position: fixed;
}

.WarningText {
	line-height: 200%;
	z-index: 3;
	top: 50%;
	padding: 15px;
	left: 50%;
	transform: translate(-50%, -50%);
	display: block;
	position: fixed;
	color: var(--Wtext);
	border-radius: var(--bordersrad);
	background-color: #9e1919;
	box-shadow: 0px 0px 50px 10px rgba(0,0,0,0.6);
	max-width: 100vw;
	width: 800px;
	max-height: 100vh;
}

.WarningTitle, .WarningBody div {
	padding: 1px 40px 5px 15px;
	margin-bottom: 15px;
	border-radius: var(--bordersrad);
	background-color: #df3d3d;
}

.WarningBody {
	padding: 15px 15px 0.1px;
	border-radius: var(--bordersrad);
	background-color: #0006;
	max-height: calc(100vh - 141px);
	overflow: auto;
}

.Warning h2 {
	padding: 12px 25px 12px 25px;
	z-index: 4;
	margin: 0;
	width: 100px;
	bottom: 40px;
	right: 40px;
	position: absolute;
	color: #df3d3d;
	user-select: none;
	text-align: center;
	border-radius: var(--bordersrad);
	background-color: var(--Wtext);
	transition: transform .2s;
}

.Warning h2:hover {
	transform: scale(1.05);
}

.WarningText h1 {
	text-align: center;
}

.WarningText p {
	font-size: 20px;
}

/* WarningText Media */
@media screen and (max-height: 800px) {
	.WarningText p {
		font-size: 17px;
		line-height: 160%;
	}
}

/* Header Styles */

.Header {
	height: 130px;
	width: 100%;
	background-color: #c9c9c9;
	box-shadow: 0px 20px 50px 0px rgba(0,0,0,0.6);
}
	
.HeaderPos {
	top: 30px;
	position: relative;
}

/* The Entire Nav Bar */
.HeaderNav {
	padding: 4px 15px;
	left: calc(1.5% - 10.5%);
	margin-top: 10px;
	justify-content: center;
	align-items: center;
	display: flex;
	position: relative;
}

/* The float for the site logo */
.HeaderLeft {
	float: left;
}

/* All the NavBar content on the right */
.HeaderRight {
	float: right;
	width: 85%;
}

/* The Guide Text */
#HeaderNavL {
	width: 300px;
	height: 80px;
	padding: 10px;
	display: flex;
	text-align: center;
	align-items: center;
	color: var(--text);
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);
}

/* The Social Media Column */
#HeaderNavR {
	height: 80px;
	padding: 10px;
	margin-left: 20px;
	display: flex;
	align-items: center;
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);
}

#HeaderTitle {
	top: -10px;
	width: 55%;
	word-spacing: 10px;
	right: calc(48.5% - 39%);
	padding: 10px;
	line-height: 40px;
	text-align: center;
	position: relative;
	margin: auto;
	color: var(--text);
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);

}

.NavIcon {
	width: 73px;
	padding: 4px;
	margin: 18px;
	border-radius: var(--bordersrad);
}

#NavLogo {
	bottom: 10px;
	width: 150px;
	padding: 22px 15px 10px 15px;
	left: 40px;
	z-index: 1;
	position: relative;
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);
	transition: transform .2s;
}

#NavLogo:hover {
	transform: scale(1.05);
}

/* Header Body Media */

@media screen and (max-width: 1400px) {
	.HeaderNav {
		top: -20px;
		width: 90%;
		display: inline-block;
	}
	.HeaderLeft {
		float: right;
		position: relative;
	}
	#HeaderTitle {
		width: 60%;
	}
	#HeaderNavL {
		height: fit-content;
		width: 100%;
		position: relative;
		justify-content: center;
		box-sizing: border-box;
	}
	#HeaderNavR {
		margin-left: 0px;
		width: 100%;
		position: relative;
		justify-content: center;
		box-sizing: border-box;
	}
	#NavLogo {
		display: none;
	}
	.NavIcon {
		margin: 9px;
	}
}

@media screen and (max-width: 500px) {
	.HeaderNav, .HeaderRight {
		width: 100%;
	}
	#HeaderTitle {
		right: auto;
	}
	.HeaderNav {
		left: auto;
		padding: 0;
	}
	#HeaderNavL, #HeaderNavR {
		height: fit-content;
		width: 100%;
		border-radius: 0;
		position: relative;
		box-shadow: none;
	}
	#HeaderNavL {
		margin-bottom: 0;
	}
	#HeaderNavR {
		margin-top: -1px;
	}
}

/* Top Body Styles */

.MainBody {
	top: 100px;
	right: 45px;
	width: 75%;
	margin: auto;
	display: table;
	position: relative;
	user-select: none;
}

.TopCards {
	display: grid;
	grid-template-columns: 1fr 1fr 1fr;
	gap: 20px;
}

.Card {
	height: 270px;
	width: 100%;
	box-sizing: border-box;
	position: relative;
	transition: transform .2s;
	border-radius: 8px;
	color: var(--Wtext);
	padding: 5px 140px 20px 5px;
	display: inline-block;
}

.Card:hover {
	transform: scale(1.05);
}

.Card h2 {
	margin-top: 10px;
	line-height: 23px;
}

.Supplies {
	padding: 10px;
	line-height: 30px;
	width: 94%;
	top: 325px;
	text-align: center;
	position: absolute;
	transition: transform .2s;
	color: var(--text);
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);
}

.Supplies:hover {
	transform: scale(1.05);
}

.CardVial {
	width: 120px;
	height: 100%;
	top: 0;
	right: 0;
	padding: 10px;
	box-sizing: border-box;
	position: absolute;
	box-shadow: var(--shadow);
	border-radius: var(--bordersrad);
	background: var(--paper-background);
}

/* Top Body Media */

@media screen and (max-width: 1400px) {
	.MainBody {
		top: 50px;
		right: 0px;
	}
	.TopCards {
		grid-template-columns: 1fr;
	}
	.Card {
		width: 100%;
	}
	.CardText {
		width: 50%;
		padding-right: 100px;
		line-height: 25px;
	}
	.Supplies {
		top: 1000px;
		padding-bottom: 80px;
	}
}

@media screen and (max-width: 500px) {
	.MainBody {
		width: calc(100% - 30px);
		margin: 15px;
	}
	.Card {
		padding: 5px 120px 20px 5px;
		height: max-content;
	}
	.CardVial {
		width: 100px;
		height: auto;
		top: 0;
		right: 0;
	}
}

/* Bottom Body Styles */

.SecondBody {
	width: 95%;
	height: 750px;
	top: 400px;
	padding: 5px;
	border-radius: 40px 40px 0px 0px;
	box-shadow: 0px 0px 30px 2px rgba(0,0,0,0.7);
	margin: auto;
	position: relative;
	background-color: var(--background);
}

.MisCard, .FaqCard{
	display: flex;
	position: relative;
	justify-content: center;
}

.FaqCard, .SecondBody h1:nth-child(3) {
	top: 30px;
	position: relative;
}

.MisCard div, .FaqCard div{
	width: 250px;
	min-height: 250px;
	padding: 5px;
	margin-right: 50px;
	box-shadow:
		inset 0 -40px 40px rgba(0,0,0,0.2),
		0 5px 6px 5px rgba(0,0,0,0.2);
	float: left;
	color: #1d1d1d;
	background-color: #ddb888;
	font-family: "Itim", serif;
	user-select: none;
	transition: transform 0.3s ease;
}

.MisCard div:hover, .FaqCard div:hover{
	transform: rotate(5deg);
}

#MiscHeader {
	text-align: center;
	color: var(--Btext);
}

/* Bottom Body Media */

@media screen and (max-width: 1400px) {
	.SecondBody {
		height: fit-content;
		padding-bottom: 50px;
	}
	.MisCard, .FaqCard {
		display: grid;
		width: calc(80% - 40px);
		grid-template-columns: 1fr 1fr;
		gap: 20px;
		margin: 0 calc(10% + 20px);
	}
	.MisCard div, .FaqCard div {
		width: 100%;
		max-width: 260px;
		min-height: 260px;
		height: 100%;
		margin: 0;
		line-height: 20px;
		box-sizing: border-box;
		justify-self: center;
	}
}
@media screen and (max-width: 600px) {
	.MisCard, .FaqCard {
		display: grid;
		width: calc(80% - 40px);
		grid-template-columns: 1fr;
		gap: 20px;
		margin: 0 calc(10% + 20px);
	}
}

/* Card Colors */

.Cardftm {
	background-image: linear-gradient(0deg, #2C4DA2FF 0%, #2f5bc9 100%);
}

.Cardmtf {
	background-image: linear-gradient(0deg, #9C2CA2FF 0%, #C92F86FF 100%);
}

.Cardblocker {
	background-image: linear-gradient(0deg, #4DA22CFF 0%, #2FC993FF 100%);
}

/* Tape Styles */

.Tape {
	height: 3vmin;
	top: -22px;
	width: 180px;
	z-index: 1;
	opacity: 0.5;
	left: calc(49.5% - 180px/2);
	position: absolute;
	background-color: var(--tape-gray);
	border-right: 1px dotted var(--tape-edge-gray);
	border-left: 1px dotted var(--tape-edge-gray);
}

.T2 {
	left: calc(0% + 55px);
	width: 150px;
}

.T3 {
	left: calc(47.5% - 170px/2);
	top: 310px;
}

/* Tape Media */
@media screen and (max-width: 1400px) {
	.T1 {
		display: none;
	}
	.T2 {
		left: 42%;
	}
	.T3 {
		top: 985px;
	}
}

@media screen and (max-width: 500px) {
	.T2 {
		left: calc(50% - 75px)
	}
}

/* Scroll Styles */

::-webkit-scrollbar-track
{
	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
	border-radius: 10px;
	background-color: #F5F5F5;
}

::-webkit-scrollbar
{
	width: 12px;
	background-color: #F5F5F5;
}

::-webkit-scrollbar-thumb
{
	border-radius: 10px;
	background-color: #979797;
}

